// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Checkbox Multiple has a helptext 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="lfr-ddm-checkbox-multiple"
    >
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            aria-checked="false"
            aria-errormessage="undefined_fieldError"
            aria-invalid="true"
            aria-labelledby="undefined_option1_fieldLabel undefined_fieldLabel"
            class="toggle-switch-check"
            id="undefined_option1"
            type="checkbox"
            value="option1"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 1
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="undefined_option1_fieldLabel"
      >
        Option 1
      </span>
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            aria-checked="false"
            aria-errormessage="undefined_fieldError"
            aria-invalid="true"
            aria-labelledby="undefined_option2_fieldLabel undefined_fieldLabel"
            class="toggle-switch-check"
            id="undefined_option2"
            type="checkbox"
            value="option2"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 2
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="undefined_option2_fieldLabel"
      >
        Option 2
      </span>
    </div>
    <span
      class="form-text"
      id="undefined_fieldTip"
    >
      Type something
    </span>
  </div>
</div>
`;

exports[`Field Checkbox Multiple has a key 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="lfr-ddm-checkbox-multiple"
    >
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            aria-checked="false"
            aria-errormessage="undefined_fieldError"
            aria-invalid="true"
            aria-labelledby="undefined_option1_fieldLabel undefined_fieldLabel"
            class="toggle-switch-check"
            id="undefined_option1"
            type="checkbox"
            value="option1"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 1
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="undefined_option1_fieldLabel"
      >
        Option 1
      </span>
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            aria-checked="false"
            aria-errormessage="undefined_fieldError"
            aria-invalid="true"
            aria-labelledby="undefined_option2_fieldLabel undefined_fieldLabel"
            class="toggle-switch-check"
            id="undefined_option2"
            type="checkbox"
            value="option2"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 2
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="undefined_option2_fieldLabel"
      >
        Option 2
      </span>
    </div>
  </div>
</div>
`;

exports[`Field Checkbox Multiple has a label 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <label
      aria-labelledby="undefined_fieldOnlyLabel"
      class="ddm-label"
      id="undefined_fieldLabel"
      tabindex="0"
    >
      label
    </label>
    <div
      class="lfr-ddm-checkbox-multiple"
    >
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            aria-checked="false"
            aria-errormessage="undefined_fieldError"
            aria-invalid="true"
            aria-labelledby="undefined_option1_fieldLabel undefined_fieldLabel"
            class="toggle-switch-check"
            id="undefined_option1"
            type="checkbox"
            value="option1"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 1
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="undefined_option1_fieldLabel"
      >
        Option 1
      </span>
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            aria-checked="false"
            aria-errormessage="undefined_fieldError"
            aria-invalid="true"
            aria-labelledby="undefined_option2_fieldLabel undefined_fieldLabel"
            class="toggle-switch-check"
            id="undefined_option2"
            type="checkbox"
            value="option2"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 2
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="undefined_option2_fieldLabel"
      >
        Option 2
      </span>
    </div>
    <span
      class="sr-only"
      id="undefined_fieldOnlyLabel"
    >
      label
    </span>
  </div>
</div>
`;

exports[`Field Checkbox Multiple has a predefined Value 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="lfr-ddm-checkbox-multiple"
    >
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            aria-checked="false"
            aria-errormessage="undefined_fieldError"
            aria-invalid="true"
            aria-labelledby="undefined_option1_fieldLabel undefined_fieldLabel"
            class="toggle-switch-check"
            id="undefined_option1"
            type="checkbox"
            value="option1"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 1
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="undefined_option1_fieldLabel"
      >
        Option 1
      </span>
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            aria-checked="false"
            aria-errormessage="undefined_fieldError"
            aria-invalid="true"
            aria-labelledby="undefined_option2_fieldLabel undefined_fieldLabel"
            class="toggle-switch-check"
            id="undefined_option2"
            type="checkbox"
            value="option2"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 2
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="undefined_option2_fieldLabel"
      >
        Option 2
      </span>
    </div>
  </div>
</div>
`;

exports[`Field Checkbox Multiple has a spritemap 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="lfr-ddm-checkbox-multiple"
    >
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            aria-checked="false"
            aria-errormessage="undefined_fieldError"
            aria-invalid="true"
            aria-labelledby="undefined_option1_fieldLabel undefined_fieldLabel"
            class="toggle-switch-check"
            id="undefined_option1"
            type="checkbox"
            value="option1"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 1
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="undefined_option1_fieldLabel"
      >
        Option 1
      </span>
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            aria-checked="false"
            aria-errormessage="undefined_fieldError"
            aria-invalid="true"
            aria-labelledby="undefined_option2_fieldLabel undefined_fieldLabel"
            class="toggle-switch-check"
            id="undefined_option2"
            type="checkbox"
            value="option2"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 2
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="undefined_option2_fieldLabel"
      >
        Option 2
      </span>
    </div>
  </div>
</div>
`;

exports[`Field Checkbox Multiple has a value 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="lfr-ddm-checkbox-multiple"
    >
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            aria-checked="false"
            aria-errormessage="undefined_fieldError"
            aria-invalid="true"
            aria-labelledby="undefined_option1_fieldLabel undefined_fieldLabel"
            class="toggle-switch-check"
            id="undefined_option1"
            type="checkbox"
            value="option1"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 1
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="undefined_option1_fieldLabel"
      >
        Option 1
      </span>
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            aria-checked="false"
            aria-errormessage="undefined_fieldError"
            aria-invalid="true"
            aria-labelledby="undefined_option2_fieldLabel undefined_fieldLabel"
            class="toggle-switch-check"
            id="undefined_option2"
            type="checkbox"
            value="option2"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 2
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="undefined_option2_fieldLabel"
      >
        Option 2
      </span>
    </div>
  </div>
</div>
`;

exports[`Field Checkbox Multiple has an id 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="lfr-ddm-checkbox-multiple"
    >
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            aria-checked="false"
            aria-errormessage="undefined_fieldError"
            aria-invalid="true"
            aria-labelledby="undefined_option1_fieldLabel undefined_fieldLabel"
            class="toggle-switch-check"
            id="undefined_option1"
            type="checkbox"
            value="option1"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 1
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="undefined_option1_fieldLabel"
      >
        Option 1
      </span>
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            aria-checked="false"
            aria-errormessage="undefined_fieldError"
            aria-invalid="true"
            aria-labelledby="undefined_option2_fieldLabel undefined_fieldLabel"
            class="toggle-switch-check"
            id="undefined_option2"
            type="checkbox"
            value="option2"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 2
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="undefined_option2_fieldLabel"
      >
        Option 2
      </span>
    </div>
  </div>
</div>
`;

exports[`Field Checkbox Multiple is not editable 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="lfr-ddm-checkbox-multiple"
    >
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            aria-checked="false"
            aria-errormessage="undefined_fieldError"
            aria-invalid="true"
            aria-labelledby="undefined_option1_fieldLabel undefined_fieldLabel"
            class="toggle-switch-check"
            disabled=""
            id="undefined_option1"
            type="checkbox"
            value="option1"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 1
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="undefined_option1_fieldLabel"
      >
        Option 1
      </span>
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            aria-checked="false"
            aria-errormessage="undefined_fieldError"
            aria-invalid="true"
            aria-labelledby="undefined_option2_fieldLabel undefined_fieldLabel"
            class="toggle-switch-check"
            disabled=""
            id="undefined_option2"
            type="checkbox"
            value="option2"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 2
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="undefined_option2_fieldLabel"
      >
        Option 2
      </span>
    </div>
  </div>
</div>
`;

exports[`Field Checkbox Multiple is not required 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="lfr-ddm-checkbox-multiple"
    >
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            aria-checked="false"
            aria-errormessage="undefined_fieldError"
            aria-invalid="true"
            aria-labelledby="undefined_option1_fieldLabel undefined_fieldLabel"
            aria-required="false"
            class="toggle-switch-check"
            id="undefined_option1"
            type="checkbox"
            value="option1"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 1
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="undefined_option1_fieldLabel"
      >
        Option 1
      </span>
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            aria-checked="false"
            aria-errormessage="undefined_fieldError"
            aria-invalid="true"
            aria-labelledby="undefined_option2_fieldLabel undefined_fieldLabel"
            aria-required="false"
            class="toggle-switch-check"
            id="undefined_option2"
            type="checkbox"
            value="option2"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 2
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="undefined_option2_fieldLabel"
      >
        Option 2
      </span>
    </div>
  </div>
</div>
`;

exports[`Field Checkbox Multiple is shown as a switcher 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="lfr-ddm-checkbox-multiple"
    >
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            aria-checked="false"
            aria-errormessage="undefined_fieldError"
            aria-invalid="true"
            aria-labelledby="undefined_option1_fieldLabel undefined_fieldLabel"
            class="toggle-switch-check"
            id="undefined_option1"
            type="checkbox"
            value="option1"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 1
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="undefined_option1_fieldLabel"
      >
        Option 1
      </span>
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            aria-checked="false"
            aria-errormessage="undefined_fieldError"
            aria-invalid="true"
            aria-labelledby="undefined_option2_fieldLabel undefined_fieldLabel"
            class="toggle-switch-check"
            id="undefined_option2"
            type="checkbox"
            value="option2"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 2
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="undefined_option2_fieldLabel"
      >
        Option 2
      </span>
    </div>
  </div>
</div>
`;

exports[`Field Checkbox Multiple is shown as checkbox 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="lfr-ddm-checkbox-multiple"
    >
      <div
        class="custom-control custom-checkbox"
      >
        <label>
          <input
            aria-checked="false"
            aria-errormessage="undefined_fieldError"
            aria-invalid="true"
            aria-labelledby="undefined_option1_fieldLabel undefined_fieldLabel"
            class="custom-control-input"
            id="undefined_option1"
            type="checkbox"
            value="option1"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 1
            </span>
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="undefined_option1_fieldLabel"
      >
        Option 1
      </span>
      <div
        class="custom-control custom-checkbox"
      >
        <label>
          <input
            aria-checked="false"
            aria-errormessage="undefined_fieldError"
            aria-invalid="true"
            aria-labelledby="undefined_option2_fieldLabel undefined_fieldLabel"
            class="custom-control-input"
            id="undefined_option2"
            type="checkbox"
            value="option2"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 2
            </span>
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="undefined_option2_fieldLabel"
      >
        Option 2
      </span>
    </div>
  </div>
</div>
`;

exports[`Field Checkbox Multiple renders Label if showLabel is true 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <label
      aria-labelledby="undefined_fieldOnlyLabel"
      class="ddm-label"
      id="undefined_fieldLabel"
      tabindex="0"
    >
      text
    </label>
    <div
      class="lfr-ddm-checkbox-multiple"
    >
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            aria-checked="false"
            aria-errormessage="undefined_fieldError"
            aria-invalid="true"
            aria-labelledby="undefined_option1_fieldLabel undefined_fieldLabel"
            class="toggle-switch-check"
            id="undefined_option1"
            type="checkbox"
            value="option1"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 1
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="undefined_option1_fieldLabel"
      >
        Option 1
      </span>
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            aria-checked="false"
            aria-errormessage="undefined_fieldError"
            aria-invalid="true"
            aria-labelledby="undefined_option2_fieldLabel undefined_fieldLabel"
            class="toggle-switch-check"
            id="undefined_option2"
            type="checkbox"
            value="option2"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 2
          </span>
        </label>
      </div>
      <span
        class="sr-only"
        id="undefined_option2_fieldLabel"
      >
        Option 2
      </span>
    </div>
    <span
      class="sr-only"
      id="undefined_fieldOnlyLabel"
    >
      text
    </span>
  </div>
</div>
`;
